# DPorts

Mk/: bsd.sanity.mk  bsd.xorg.mk
devel/intel-gpu-tools/: Makefile  Makefile.DragonFly  distinfo  pkg-descr  pkg-plist
devel/intel-gpu-tools/dragonfly/: patch-lib_drmtest.h  patch-lib_igt_core.c  patch-lib_igt_kms.c  patch-lib_intel_gpu_frequency.c  patch-lib_intel_os.c  patch-tests_pm_rpm.c
devel/libdevq/: Makefile.DragonFly
devel/pocl/: Makefile
devel/pocl/dragonfly/: patch-scripts_CMakeLists.txt
graphics/dri/: Makefile  Makefile.DragonFly
graphics/libEGL/: Makefile
graphics/libGL/: Makefile.common  distinfo
graphics/libGL/dragonfly/: patch-scons_dragonfly
graphics/libGL/files/: configure.ac  patch-assyntax.h  patch-common_x86.c  patch-configure  patch-src__gallium__auxiliary__util__u_cpu_detect.c  patch-src__gallium__drivers__r300__r300_chipset.c  patch-src__gallium__include__pipe__p_config.h  patch-src__gallium__winsys__svga__drm__vmw_screen_ioctl.c  patch-src__loader__Makefile.in  patch-src__loader__loader.c  patch-src__mapi__entry_x86-64_tls.h  patch-src__mapi__entry_x86_tls.h  patch-src__mapi__entry_x86_tsd.h  patch-src__mapi__glapi__gen__gl_gentable.py  patch-src__mesa__main__compiler.h  patch-xmlconfig.h  src__loader__Makefile.am
graphics/libdrm/: Makefile  distinfo  pkg-plist
graphics/libepoxy/: Makefile
graphics/mesa-demos-all/: Makefile  distinfo  pkg-plist
graphics/mesa-demos-all/dragonfly/: patch-configure.ac  patch-sincos
graphics/mesa-pack/: Makefile  pkg-descr  pkg-plist
graphics/mesa-pack/dragonfly/: patch-src__egl__drivers__dri2__platform_wayland.c  patch-src_loader_loader.c
graphics/mesa-pack/files/: extra-patch-libva_headers_bootstrap
graphics/wayland/: Makefile
lang/beignet/: Makefile.DragonFly
lang/beignet/files/: patch-src_cl__device__id.c
lang/clover/: Makefile  Makefile.DragonFly
math/clfft/files/: patch-src_include_sharedLibrary.h
multimedia/libva/: Makefile
multimedia/mpv/: Makefile.DragonFly
www/firefox/: Makefile.DragonFly
x11-drivers/xf86-input-mouse/: Makefile
x11-drivers/xf86-video-ati/: Makefile
x11-drivers/xf86-video-intel29/: Makefile
x11-drivers/xorg-drivers/: Makefile.DragonFly
x11-servers/xorg-server/: Makefile  pkg-plist
